force-app/main/default/objects/Case/fields/Alert_Icon__c.field-meta.xml
<CustomField>
    <fullName>Alert_Icon__c</fullName>
    <formula>IF(Hours_Since_Follow_up_Date_Time__c &gt; 10, IMAGE(&quot;/resource/icons/Red_Triangle.png&quot;, &quot;Red triangle&quot;, 25, 25),
IF(Hours_Since_Follow_up_Date_Time__c &gt; 5, IMAGE(&quot;/resource/icons/Yellow_Triangle.png&quot;, &quot;Yellow triangle&quot;, 25, 25),
IMAGE(&quot;/resource/icons/Green_Triangle.png&quot;, &quot;Green triangle&quot;, 25, 25)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert Icon</label>
    <type>Text</type>
</CustomField>