force-app/main/default/objects/Case/fields/All_Icons__c.field-meta.xml
<CustomField>
    <fullName>All_Icons__c</fullName>
    <formula>Alert_Icon__c  &amp;  Passes_the_sniff_test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Icons</label>
    <type>Text</type>
</CustomField>