force-app/main/default/objects/Case/fields/Hours_Since_Follow_up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Follow_up_Date_Time__c</fullName>
    <formula>(NOW() -  Follow_up_Date__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since Follow-up Date / Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>