force-app/main/default/objects/Case/fields/Passes_the_sniff_test__c.field-meta.xml
<CustomField>
    <fullName>Passes_the_sniff_test__c</fullName>
    <formula>IMAGE(&quot;/resource/icons/the_rock.gif&quot;, &quot;Nope&quot;, 40, 40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passes the sniff test?</label>
    <type>Text</type>
</CustomField>